changed the table lay out again on cart.html to ensure items are aligned properly

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -319,6 +319,10 @@ ul {
     height: 200px;
 }
 
+.cart-heading {
+      font-family: 'Satisfy', cursive;
+}
+
 /* media queries */
 
 @media (max-width: 768px) {
